--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../public/style/style.css">
 </head>
 <body>
+    <div id="root"></div>
     <div class="container">
         <h2>Login</h2>
         <form action="/login" method="POST">
