--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./style/style.css">
 </head>
+
 <body>
+    <div id="root"></div>
     <div class="container">
         <h2>Login</h2>
         <form action="/login" method="POST">
@@ -18,8 +21,12 @@
                 <label for="password">Password</label>
                 <input type="password" id="password" name="password" required>
             </div>
+            <div>
+                <a href="/register">Register</a>
+            </div>
             <button type="submit">Login</button>
         </form>
     </div>
 </body>
+
 </html>
