mudança em abordagem

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -10,6 +10,16 @@
 
 <body>
     <div id="root"></div>
+    <div id="div-home-primaria">
+        <img src="../public/img/img1.jpg" alt="imagem1">
+        &nbsp;&nbsp;
+        <a href="../src/components/Login.js">Login2</a>
+        <button id="btn-login">Login</button>
+        <div id="div-home-secudaria">
+            <img src="../public/img/img1.jpg" alt="imagem1">
+            <button>Go to-do list</button>
+        </div>
+    </div>
 </body>
 
 </html>
